--- a/AddressingFairnessInPoliceData/Readme
+++ b/AddressingFairnessInPoliceData/Readme
@@ -1,1 +1,3 @@
 
+FairnessInML_2021 jupyter notebook is where I have implemented all my codes. The link to the metropolitan police dataset I used is embedded in the codes. Kindly click on the link provided to accesse dataset.
+I have also attached the executable python file.
