--- a/AddressingFairnessInPoliceData/Readme
+++ b/AddressingFairnessInPoliceData/Readme
@@ -1,3 +1,13 @@
 
-FairnessInML_2021 jupyter notebook is where I have implemented all my codes. The link to the metropolitan police dataset I used is embedded in the codes. Kindly click on the link provided to accesse dataset.
-I have also attached the executable python file.
+FairnessInML_2021 jupyter notebook is where I have implemented all my codes. 
+The link to the metropolitan police dataset I used is embedded in the codes. 
+Kindly click on the link provided to access dataset.
+I have also added the python executable code.
+
+Packages to install before running the codes are:
+aif360
+sklearn 
+matplotlib
+numpy
+pandas
+
