--- a/AddressingFairnessInPoliceData/Readme
+++ b/AddressingFairnessInPoliceData/Readme
@@ -1,13 +1,13 @@
 
-FairnessInML_2021 jupyter notebook is where I have implemented all my codes. 
-The link to the metropolitan police dataset I used is embedded in the codes. 
-Kindly click on the link provided to access dataset.
+FairnessInML_2021 jupyter notebook is where I have all my codes implemented. 
+The metropolitan police dataset is 74mb too large for GitHub, but I have included a link to download it in the codes.
+Kindly click on the link provided to access the dataset.
 I have also added the python executable code.
 
-Packages to install before running the codes are:
+Packages and the version that may be required to run the code:
 aif360
-sklearn 
-matplotlib
-numpy
-pandas
+scikit-learn 0.24.1 
+matplotlib 3.3.4
+numpy 1.19.2
+pandas 1.2.3
 
